--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caliz Valley</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./inicio/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
     <header>
         <nav class="navbar">
-            <img class="logo" src="/img/logo2.png" alt="Logo">
+            <img class="logo" src="./img/logo2.png" alt="Logo">
             <ul>
                 <li><a href="/inicio/index.html">Inicio</a></li>
                 <li><a href="#objetivo">Objetivo</a></li>
@@ -27,7 +27,7 @@
 
     <section id="banner">
         <video autoplay muted loop>
-            <source src="/img/179207-861403607_small.mp4" type="video/mp4">
+            <source src="./img/179207-861403607_small.mp4" type="video/mp4">
         </video>
         <div class="overlay"></div>
         <div id="content-banner">
@@ -38,7 +38,7 @@
 
     <main>
         <video autoplay muted loop id="background-video">
-            <source src="/img/217122_small.mp4" type="video/mp4">
+            <source src="./img/217122_small.mp4" type="video/mp4">
         </video>
 
         <section class="container">
@@ -90,25 +90,25 @@
 
         <section class="container-multi">
             <div class="content-section-multi">
-                <img src="/img/uno.png" alt="">
+                <img src="./img/uno.png" alt="">
             </div>
         </section>
 
         <section class="container-multi">
             <div class="content-section-multi">
-                <img src="/img/dos.png" alt="">
+                <img src="./img/dos.png" alt="">
             </div>
         </section>
 
         <section class="container-multi">
             <div class="content-section-multi">
-                <img src="/img/tres.png" alt="">
+                <img src="./img/tres.png" alt="">
             </div>
         </section>
 
         <section class="container-multi">
             <div class="content-section-multi">
-                <img src="/img/cuatro.png" alt="">
+                <img src="./img/cuatro.png" alt="">
             </div>
         </section>
 
@@ -154,7 +154,7 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="./inicio/script.js"></script>
 
     <footer>
         <div class="footer-container">
