--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div class="overlay"></div>
         <div id="content-banner">
             <h1>Caliz Valley</h1>
-            <p>Welcome to our space of serenity! We present you with a video game designed to immerse you in a world of relaxation and peace. Explore tranquil landscapes, enjoy soothing melodies and participate in activities that promote calm and well-being. Our goal is to offer you a haven to unwind from daily stress and rejuvenate your spirit-discover harmony through play!</p>
+            <a href="https://www.roblox.com/es/games/91680659679039/Caliz-Valley" class="play-button">Jugar Ahora</a>
+            <!-- <p>Welcome to our space of serenity! We present you with a video game designed to immerse you in a world of relaxation and peace. Explore tranquil landscapes, enjoy soothing melodies and participate in activities that promote calm and well-being. Our goal is to offer you a haven to unwind from daily stress and rejuvenate your spirit-discover harmony through play!</p> -->
         </div>
     </section>
 
